# FemurSegmentation

./: .gitignore  CMakeLists.txt  README.md
include/: itkCalgaryEigenToMeasureImageFilter.h  itkCalgaryEigenToMeasureImageFilter.hxx  itkCalgaryEigenToMeasureParameterEstimationFilter.h  itkCalgaryEigenToMeasureParameterEstimationFilter.hxx  itkEigenToMeasureImageFilter.hxx  itkEndostealSegmentationImageFilter.h  itkEndostealSegmentationImageFilter.hxx  itkGridCutImageFilter.h  itkGridCutImageFilter.hxx  itkHUPeriostealSegmentationImageFilter.h  itkHUPeriostealSegmentationImageFilter.hxx  itkMultiScaleHessianEnhancementImageFilter.hxx  itkPeriostealSegmentationImageFilter.h  itkPeriostealSegmentationImageFilter.hxx  itkStandardGraphCutSegmentationImageFilter.h  itkStandardGraphCutSegmentationImageFilter.hxx
include/dev/: itkMultiLabelGridCutImageFilter.h  itkMultiLabelGridCutImageFilter.hxx
lib/: .gitignore  README.txt
scripts/: periosteal_segmentation.py  sheetness.py  submit_periosteal.sh  submit_sheetness.sh
src/: CMakeLists.txt  endosteal_segmentation.cxx  hu_periosteal_segmentation.cxx  periosteal_segmentation.cxx  sheetness.cxx  sheetness2.cxx
